--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   "devDependencies": {
     "aws-sdk": "^2.2.27",
     "grunt": "^0.4.5",
-    "grunt-aws-lambda": "^0.11.0"
+    "grunt-aws-lambda": "^0.11.0",
+    "grunt-contrib-jshint": "^0.11.3",
+    "grunt-contrib-watch": "^0.6.1",
+    "jshint-stylish": "^2.1.0"
   },
   "dependencies": {
     "cheerio": "^0.19.0",
